2003-04-04  JP Rosevear  <jpr@ximian.com>

	Fixes #40790
	
	* gui/alarm-notify/alarm-queue.c (procedure_notification_dialog):
	return based on the response code (not old button stuff)

2003-04-04  Ettore Perazzoli  <ettore@ximian.com>
  
       * gui/dialogs/alarm-options.c (alarm_to_dialog): Make the file
       entry modal.  [#40792]

2003-04-04  JP Rosevear  <jpr@ximian.com>
	
	Fixes #40789
	
	* gui/dialogs/alarm-options.c (alarm_to_dalarm_widgets):
	description is a text buffer
	(alarm_to_malarm_widgets): ditto
	(dalarm_widgets_to_alarm): ditto
	(malarm_widgets_to_alarm): ditto
	(alarm_to_repeat_widgets): check repeat status correctly

2003-04-04  Dan Winship  <danw@ximian.com>

	* gui/e-itip-control.c (write_html): Don't free static string.

2003-04-04  JP Rosevear  <jpr@ximian.com>

	* gui/cal-search-bar.c (cal_search_bar_destroy): guard against
	multiple destroy calls

2003-04-04  JP Rosevear  <jpr@ximian.com>
	
	* cal-client/cal-client.c (get_default_uri): guard against empty
	uri as well

2003-04-04  JP Rosevear  <jpr@ximian.com>
	
	Fixes #40722
	
	* gui/e-meeting-time-sel.c (e_meeting_time_selector_destroy):
	guard against multiple destroy calls

2003-04-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gui/control-factory.c (set_prop): Add a check to see if the view
	should be the day-view and change the default to be whatever
	calendar_config_get_default_view() returns. Should fix bug #39735.

	* gui/calendar-config.h: calendar_config_write() and
	calendar_config_write_on_exit() no longer exist. Removed
	prototypes.

	* gui/control-factory.c (set_prop): g_strcasecmp() is
	deprecated. Since the values can never be anything other than all
	lowercase anyway, just use strcmp.

2003-04-02  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #39262
	
	* importers/icalendar-importer.c (load_file_fn, vcal_load_file_fn):
	use folder_type argument to determine what to import.
	
2003-04-02  Rodrigo Moya <rodrigo@ximian.com>
