@@ -105,6 +105,7 @@ typedef enum
 	E_WEEK_VIEW_COLOR_EVENT_TEXT,
 	E_WEEK_VIEW_COLOR_GRID,
 	E_WEEK_VIEW_COLOR_SELECTED,
+	E_WEEK_VIEW_COLOR_SELECTED_UNFOCUSSED,
 	E_WEEK_VIEW_COLOR_DATES,
 	E_WEEK_VIEW_COLOR_DATES_SELECTED,
 	E_WEEK_VIEW_COLOR_TODAY,
